--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="ROBOTS" content="ALL">
     <meta name="format-detection" content="telephone=no">
 
-    <title itemprop="name">Crewshop</title>
+    <title itemprop="name">크루샵 : 프랑크푸르트 공항에서 새로운 쇼핑을 경험하세요.</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -131,17 +131,17 @@
       <div class="container">
         <h2 class="header">크루샵 오시는 길을 알려드립니다</h2>
         <div class="row">
-          <div class="col-md-6">
-            <h3 class="title">자가용 이용시</h3>
+          <div class="col-md-4">
+            <h3 class="title icon-small-car">자가용 이용시</h3>
             <p>내비게이션에서 Intercity Hotel Frankfurt airport 혹은 Am Luftbrückendenkmal 1, 60549 Frankfurt am Main을 검색하시면 됩니다</p>
           </div>
-          <div class="col-md-6">
-            <h3 class="title">셔틀</h3>
+          <div class="col-md-4">
+            <h3 class="title icon-small-bus">셔틀</h3>
             <p>Frankfurt 공항 터미널 1 셔틀버스 정류장에서 Intercity 호텔로 이동하는 셔틀을 이용하시면 편합니다
             </p>
           </div>
-          <div class="col-md-6">
-            <h3 class="title">주차</h3>
+          <div class="col-md-4">
+            <h3 class="title icon-small-parking">주차</h3>
             <p>인터시티 호텔 뒷편으로 오시면 간이 주차 공간이 있습니다</p>
           </div>
         </div>
