--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <h3 class="header">택스 리펀으로<br />더 저렴하게 구매하세요</h3>
+            <h3 class="header icon-small-tax-refund">택스 리펀으로<br />더 저렴하게 구매하세요</h3>
             여행 중 방문해주신 고객님이나, 크루 고객님들께서는 독일 부가세 19%를 돌려받으실 수 있습니다!<br />
             계산하실 때 프론트에 문의해주세요
           </div>
