--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="ROBOTS" content="ALL">
     <meta name="format-detection" content="telephone=no">
 
-    <title itemprop="name">크루샵 : 프랑크푸르트 공항에서 새로운 쇼핑을 경험하세요.</title>
+    <title itemprop="name">Louise26 Bad homburg</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/common.css">
-
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
+    <link rel="stylesheet" href="https://use.typekit.net/evx5bta.css">
 
     <!-- jQuery -->
     <script
@@ -25,124 +25,115 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-    <script>
-    $(window).on("scroll", function() {
-        if($(window).scrollTop() > 760) {
-            $("#navbar").addClass("navbar-color");
-        } else {
-            //remove the background property so it comes transparent again (defined in your css)
-           $("#navbar").removeClass("navbar-color");
-        }
-    });
-    $(window).on("scroll", function() {
-        if($(window).scrollTop() > 1050) {
-            $("#brief-1").addClass("fade-in");
-        } else {
-            //remove the background property so it comes transparent again (defined in your css)
-           $("#brief-1").removeClass("fade-in");
-        }
-    });
-    $(window).on("scroll", function() {
-        if($(window).scrollTop() > 1300) {
-            $("#brief-2").addClass("fade-in");
-        } else {
-            //remove the background property so it comes transparent again (defined in your css)
-           $("#brief-2").removeClass("fade-in");
-        }
-    });
-    $(window).on("scroll", function() {
-        if($(window).scrollTop() > 1450) {
-            $("#brief-3").addClass("fade-in");
-        } else {
-            //remove the background property so it comes transparent again (defined in your css)
-           $("#brief-3").removeClass("fade-in");
-        }
-    });
-    </script>
 
   </head>
   <body>
     <div class="intro-header intro-hero background-full">
       <div class="logo">
-        <img src="svg/logo.svg" width="150" height="40" />
+        <img src="svg/logo.svg" width="200" />
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <ul class="nav-custom">
+              <li>Home</li>
+              <li>Unsere Geschichte</li>
+              <li>Marken</li>
+              <li>Cafe und Backerei</li>
+              <li>News</li>
+              <li>Anfahrt und Kontakt</li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="container">
         <div class="row">
           <div class="col-md-8">
             <h1>
-              Welcome to CREWSHOP
+              New Marken im<br />
+              Bad Homburg
             </h1>
             <h2>
-              지금 가장 핫 한 화장품,<br />
-              트렌디한 인테리어 소품,<br />
-              예쁜 그릇 및 각종 건강식품, 최신 전자제품까지<br />
-              크루샵에서 한 번에, 편리하게 구매할 수 있습니다~
+              Our mission is, and always has been, to help you move freely.<br />
+              Ever since Bugaboo began in 1994,<br />
+              we've taken pride in dreaming up game-changing products that<br />
+              help you explore the world around you in unparalleled comfort and unmistakable style. 
             </h2>
           </div>
+          <div class="col-md-12" style="position: relative;">
+            <img src="images/icon_crewshop_small_arrow_bottom.png" class="arrow-bottom" />
+          </div>
         </div>
       </div>
     </div>
-    <div class="concept-block block background-full concept-hero">
+    <div class="introduce-block block">
       <div class="container">
         <div class="row">
-          <h2 class="header">크루샵에서 유럽의 다양한 상품을 만나보세요</h2>
-          <div class="col-md-3 paragraph">
-            <화장품><br />
-            바버, 에뜨레벨, 산수시, 히스토메르씨, 알렉스,
-            슈라멕, 마티덤, 소티스, 딸고, 클랍, 카말돌리, 보타니쿠스
-          </div>
-          <div class="col-md-3 paragraph">
-            <포셀린><br />
-            로얄코펜하겐, 헤렌드, 마리메꼬, 까르투하, 페자로,
-            세락스, 포트메리온, 라이첸바흐, 꼬떼따블
-          </div>
-          <div class="col-md-3 paragraph">
-            <주방용품, 가전><br />
-            스켑슐트, 쯔빌링, WMF, 실리트, 뢰슬레, 베스코
-            드롱기, 일리, 크룹스
-          </div>
-          <div class="col-md-3 paragraph">
-            <패션><br />
-            롱샴, 코치, 프라다, 펜디
+          <div class="col-md-12">
+            <h2 class="header">Unsere Geschichte</h2>
+            <h3 class="header-sub">vom Louise26</h3>
           </div>
         </div>
       </div>
     </div>
+    <!-- <div class="concept-block block background-full concept-hero">
+      <div class="container">
+        <div class="row">
+          <h2 class="header">Discover a variety of European products at Crew Shop</h2>
+          <div class="col-md-3 paragraph">
+            <strong>Cosmetics</strong><br />
+            Babor, Ettlebel, Sansusi, Alexi, Martiderm, Sortis, Ddalgo, Klap
+          </div>
+          <div class="col-md-3 paragraph">
+            <strong>Porcelain</strong><br />
+            Royal Copenhagen, Herend, Marimekko, Le Cartuja, Pesaro,
+            Serax, Portmerion, Reichenbach, Cote table
+          </div>
+          <div class="col-md-3 paragraph">
+            <strong>Kitchen, Household</strong><br />
+            Skepshult, Zwilling, WMF, Silit, Rosle, Wesco
+            Delonghi, Illy, Krups
+          </div>
+          <div class="col-md-3 paragraph">
+            <strong>Fashion</strong><br />
+            Longchamp, Coach, Prada, Fendy
+          </div>
+        </div>
+      </div>
+    </div> -->
     <div class="brand-block block">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <h3 class="header icon-small-tax-refund">택스 리펀으로<br />더 저렴하게 구매하세요</h3>
-            여행 중 방문해주신 고객님이나, 크루 고객님들께서는 독일 부가세 19%를 돌려받으실 수 있습니다!<br />
-            계산하실 때 프론트에 문의해주세요
+            <h3 class="header icon-small-tax-refund">By tax refiners<br />Buy more affordably</h3>
+            If you are traveling, or if you are a crew member, you can get a 19% German tax return! Please contact the front desk when you make your calculation.
           </div>
           <div class="col-md-4">
-            <h3 class="header">맞춤식 쇼핑 상담도<br />받아보세요</h3>
-            귀임준비, 기업선물, 단체선물 등 특별한 순간에 필요한 맞춤 쇼핑을 퍼스널 쇼퍼가 도와드립니다
+            <h3 class="header icon-small-counselor">Get custom<br />shopping advice</h3>
+            Personal shoppers can help you with customized shopping for special occasions such as rehearsal preparation, corporate gifts, group gifts.
           </div>
           <div class="col-md-4">
-            <h3 class="header">시즌별 파격 세일과<br />상시 할인을 놓치지 마세요</h3>
-            다양한 하이엔드 브랜드 제품들을 특별한 가격으로 만날 수 있는 스페셜 이벤트에 함께하세요
+            <h3 class="header icon-small-bag-discount">Do not miss seasonal discounts<br />and all-time discounts</h3>
+            Join a special event to meet a variety of high-end brand products at special prices.
           </div>
         </div>
       </div>
     </div>
     <div class="map-block block">
       <div class="container">
-        <h2 class="header">크루샵 오시는 길을 알려드립니다</h2>
+        <h2 class="header">Way-finding</h2>
         <div class="row">
           <div class="col-md-4">
-            <h3 class="title icon-small-car">자가용 이용시</h3>
-            <p>내비게이션에서 Intercity Hotel Frankfurt airport 혹은 Am Luftbrückendenkmal 1, 60549 Frankfurt am Main을 검색하시면 됩니다</p>
+            <h3 class="title icon-small-car">By Car</h3>
+            <p>In the navigation you can search Intercity Hotel Frankfurt airport or Am Luftbrückenden kmal 1, 60549 Frankfurt am Main.</p>
           </div>
           <div class="col-md-4">
-            <h3 class="title icon-small-bus">셔틀</h3>
-            <p>Frankfurt 공항 터미널 1 셔틀버스 정류장에서 Intercity 호텔로 이동하는 셔틀을 이용하시면 편합니다
-            </p>
+            <h3 class="title icon-small-bus">Shuttle Bus</h3>
+            <p>It is convenient to take the shuttle to Frankfurt Airport Terminal 1 shuttle bus stop to Intercity hotel.</p>
           </div>
           <div class="col-md-4">
-            <h3 class="title icon-small-parking">주차</h3>
-            <p>인터시티 호텔 뒷편으로 오시면 간이 주차 공간이 있습니다</p>
+            <h3 class="title icon-small-parking">Parking Lot</h3>
+            <p>If you come to the back of InterCity Hotel, there is a free parking space.</p>
           </div>
         </div>
       </div>
@@ -151,29 +142,29 @@
       <div class="container">
         <div class="row">
           <div class="col-md-9">
-            <h2 class="header">연락처</h2>
+            <h2 class="header">Contact</h2>
             <div class="row">
               <div class="col-md-4 contact-item">
-                <strong>전화</strong><br />
+                <strong>Telephone</strong><br />
                 +49 (0)176 6748 8188
               </div>
               <div class="col-md-4 contact-item">
-                <strong>카카오톡</strong><br />
-                친구찾기 > 카카오톡ID 검색 > crewshop
+                <strong>Kakaotalk</strong><br />
+                Find friend > Searching by Kakaotalk ID > crewshop
               </div>
               <div class="col-md-4 contact-item">
-                <strong>이메일</strong><br />
+                <strong>Email</strong><br />
                 crewshop@crewshop.de
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <h2 class="header">개점시간</h2>
+            <h2 class="header">Opening hour</h2>
             <div class="row">
               <div class="col-md-12 contact-item">
-                월~금 : 오전9시-오후4시<br />
-                일요일 : 오전9시-오후13시<br />
-                * 토요일은 쉽니다
+                Mon - Fri: 9 am - 4 pm<br />
+                Sunday: 9 am - 13 pm<br />
+                * Saturday is closed
               </div>
             </div>
           </div>
@@ -183,10 +174,8 @@
     <footer class="footer-block">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
-          </div>
-          <div class="col-md-8">
-            <strong>© 2018 CREWSHOP</strong> Luftbrückendenkmal 1, 60549 Frankfurt am Main
+          <div class="col-md-12">
+            <strong><img src="svg/logo-rectangle.svg" width="18" style="margin-top: -2px;" /> © 2018 CREWSHOP</strong> Luftbrückendenkmal 1, 60549 Frankfurt am Main
           </div>
         </div>
       </div>
