아이콘 개선 및 내용 추가

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <div class="intro-header intro-hero background-full">
       <div class="logo">
-        <img src="svg/logo.svg" width="200" />
+        <img src="svg/logo-rectangle.svg" width="30" />
       </div>
       <div class="container">
         <div class="row">
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="header">Unsere Geschichte</h2>
+            <h2 class="header"><U></U>nsere Geschichte</h2>
             <h3 class="header-sub">vom Louise26</h3>
           </div>
         </div>
