--- a/index.html
+++ b/index.html
@@ -36,32 +36,28 @@
         <div class="row">
           <div class="col-md-12">
             <ul class="nav-custom">
-              <li>Home</li>
-              <li>Unsere Geschichte</li>
-              <li>Marken</li>
-              <li>Cafe und Backerei</li>
-              <li>News</li>
-              <li>Anfahrt und Kontakt</li>
+              <li><a href="shop.html">샵 소개</a></li>
+              <li><a href="brand.html">취급 브랜드</a></li>
+              <li><a href="bakery.html">베이커리/카페테리아</a></li>
+              <li><a href="contact.html">연락처</a></li>
             </ul>
           </div>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-12">
             <h1>
-              New Marken im<br />
-              Bad Homburg
+              삶과 생활을<br />디자인 해드립니다
             </h1>
             <h2>
-              Our mission is, and always has been, to help you move freely.<br />
-              Ever since Bugaboo began in 1994,<br />
-              we've taken pride in dreaming up game-changing products that<br />
-              help you explore the world around you in unparalleled comfort and unmistakable style. 
+              루이제26은 고객 여러분의 삶을 풍요롭게 하기 위한 라이프 스타일 전문 샵/베이커리입니다.
             </h2>
           </div>
-          <div class="col-md-12" style="position: relative;">
-            <img src="images/icon_crewshop_small_arrow_bottom.png" class="arrow-bottom" />
+          <div class="col-md-12">
+            <div style="position: relative;" class="btn-more-info">
+              <img src="images/icon_crewshop_small_arrow_bottom.png" class="arrow-bottom" />
+            </div>
           </div>
         </div>
       </div>
@@ -70,8 +66,14 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="header"><U></U>nsere Geschichte</h2>
+            <h2 class="header">Unsere Geschichte</h2>
             <h3 class="header-sub">vom Louise26</h3>
+          </div>
+          <div class="col-md-6"></div>
+          <div class="col-md-6">
+            <p>Our values reflect those of a business started by a band of climbers and surfers, and the minimalist style they promoted. The approach we take towards product design demonstrates a bias for simplicity and utility.</p>
+            <p>For us at Patagonia, a love of wild and beautiful places demands participation in the fight to save them, and to help reverse the steep decline in the overall environmental health of our planet. We donate our time, services and at least 1% of our sales to hundreds of grassroots environmental groups all over the world who work to help reverse the tide.</p>
+            <p>We know that our business activity – from lighting stores to dyeing shirts – creates pollution as a by-product. So we work steadily to reduce those harms. We use recycled polyester in many of our clothes and only organic, rather than pesticide-intensive, cotton.</p>
           </div>
         </div>
       </div>
@@ -101,72 +103,105 @@
         </div>
       </div>
     </div> -->
+    <div class="divider">&nbsp;</div>
     <div class="brand-block block">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
-            <h3 class="header icon-small-tax-refund">By tax refiners<br />Buy more affordably</h3>
-            If you are traveling, or if you are a crew member, you can get a 19% German tax return! Please contact the front desk when you make your calculation.
+          <div class="col-md-12">
+            <h2 class="header">Marken</h2>
+            <h3 class="header-sub">vom Louise26</h3>
           </div>
-          <div class="col-md-4">
-            <h3 class="header icon-small-counselor">Get custom<br />shopping advice</h3>
-            Personal shoppers can help you with customized shopping for special occasions such as rehearsal preparation, corporate gifts, group gifts.
+          <div class="col-md-12">
+            <ul class="brand-list-wrap">
+              <li><p class="brand-list-item logo-normann"></p></li>
+              <li><p class="brand-list-item logo-vita"></p></li>
+              <li><p class="brand-list-item logo-recaro"></p></li>
+              <li><p class="brand-list-item">Royal Copenhagen</p></li>
+              <li><p class="brand-list-item logo-kusmitea"></p></li>
+              <li><p class="brand-list-item logo-kai"></p></li>
+              <li><p class="brand-list-item logo-illy"></p></li>
+              <li><p class="brand-list-item logo-delonghi"></p></li>
+              <li><p class="brand-list-item">VBC Casa</p></li>
+              <li><p class="brand-list-item">Wesco</p></li>
+              <li><p class="brand-list-item">Nesmuk</p></li>
+              <li><p class="brand-list-item logo-cybex"></p></li>
+            </ul>
           </div>
-          <div class="col-md-4">
-            <h3 class="header icon-small-bag-discount">Do not miss seasonal discounts<br />and all-time discounts</h3>
-            Join a special event to meet a variety of high-end brand products at special prices.
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="map-block block">
-      <div class="container">
-        <h2 class="header">Way-finding</h2>
-        <div class="row">
-          <div class="col-md-4">
-            <h3 class="title icon-small-car">By Car</h3>
-            <p>In the navigation you can search Intercity Hotel Frankfurt airport or Am Luftbrückenden kmal 1, 60549 Frankfurt am Main.</p>
-          </div>
-          <div class="col-md-4">
-            <h3 class="title icon-small-bus">Shuttle Bus</h3>
-            <p>It is convenient to take the shuttle to Frankfurt Airport Terminal 1 shuttle bus stop to Intercity hotel.</p>
-          </div>
-          <div class="col-md-4">
-            <h3 class="title icon-small-parking">Parking Lot</h3>
-            <p>If you come to the back of InterCity Hotel, there is a free parking space.</p>
+          <div class="col-md-12 btn-wrap">
+            <button class="btn-orange">More Infomation</button>
           </div>
         </div>
       </div>
     </div>
-    <div class="contact-block block">
+    <div class="cafe-block block background-full cafe-hero">
       <div class="container">
         <div class="row">
-          <div class="col-md-9">
-            <h2 class="header">Contact</h2>
-            <div class="row">
-              <div class="col-md-4 contact-item">
-                <strong>Telephone</strong><br />
-                +49 (0)176 6748 8188
-              </div>
-              <div class="col-md-4 contact-item">
-                <strong>Kakaotalk</strong><br />
-                Find friend > Searching by Kakaotalk ID > crewshop
-              </div>
-              <div class="col-md-4 contact-item">
-                <strong>Email</strong><br />
-                crewshop@crewshop.de
-              </div>
-            </div>
+          <div class="col-md-12">
+            <h2 class="header">Cafe und Backerei</h2>
+            <h3 class="header-sub">vom Louise26</h3>
           </div>
-          <div class="col-md-3">
-            <h2 class="header">Opening hour</h2>
-            <div class="row">
-              <div class="col-md-12 contact-item">
-                Mon - Fri: 9 am - 4 pm<br />
-                Sunday: 9 am - 13 pm<br />
-                * Saturday is closed
-              </div>
-            </div>
+          <div class="col-md-6">
+            <p>Our values reflect those of a business started by a band of climbers and surfers, and the minimalist style they promoted. The approach we take towards product design demonstrates a bias for simplicity and utility.</p>
+            <p>For us at Patagonia, a love of wild and beautiful places demands participation in the fight to save them, and to help reverse the steep decline in the overall environmental health of our planet. We donate our time, services and at least 1% of our sales to hundreds of grassroots environmental groups all over the world who work to help reverse the tide.</p>
+            <p>We know that our business activity – from lighting stores to dyeing shirts – creates pollution as a by-product. So we work steadily to reduce those harms. We use recycled polyester in many of our clothes and only organic, rather than pesticide-intensive, cotton.</p>
+          </div>
+          <div class="col-md-6"></div>
+        </div>
+      </div>
+    </div>
+    <div class="direction-block block">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="header">Anfahrt</h2>
+            <h3 class="header-sub">vom Louise26</h3>
+          </div>
+          <div class="col-md-12">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d978.4146732131574!2d8.613317990272614!3d50.22853549049208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd07f14fc18193%3A0x87bf3504c6113917!2sLouise+26!5e0!3m2!1sko!2sde!4v1531300767743" width="100%" height="450" frameborder="0" style="border:1px solid #e3e3e3" allowfullscreen></iframe><br /><br />
+            <p>Louisenstraße 26, 61348 Bad Homburg vor der Höhe</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="contact-block block background-full contact-hero">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="header">Kontakt</h2>
+            <h3 class="header-sub">vom Louise26</h3>
+          </div>
+          <div class="col-md-6 contact-item">
+            <strong>Louise26 Shop</strong>
+            +49 (0)176 6748 8188
+          </div>
+          <div class="col-md-6 contact-item">
+            <strong>Louise26 E-MAIL</strong>
+            info@louise26.de
+          </div>
+          <div class="col-md-6 contact-item">
+            <strong>Instagram</strong>
+            @louise26badhomburg
+          </div>
+          <div class="col-md-6 contact-item">
+            <strong>Facebook</strong>
+            fb.com/@louise26badhomburg
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="opening-time-block block">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 opening-time-item">
+            <strong>Öffnungszeiten</strong>
+            Montag bis Samstag<br />
+            9:00 bis 18:00 Uhr
+          </div>
+          <div class="col-md-3 opening-time-item">
+          </div>
+          <div class="col-md-6 opening-time-item">
+            <strong>Newsletter</strong>
+            @louise26badhomburg
           </div>
         </div>
       </div>
@@ -175,7 +210,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <strong><img src="svg/logo-rectangle.svg" width="18" style="margin-top: -2px;" /> © 2018 CREWSHOP</strong> Luftbrückendenkmal 1, 60549 Frankfurt am Main
+            <img src="svg/logo-rectangle.svg" width="18" style="margin-top: -2px;" /> <strong>© 2018 Louise26</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Louisenstraße 26, 61348 Bad Homburg vor der Höhe
           </div>
         </div>
       </div>
