헤더쪽 정리

--- a/index.html
+++ b/index.html
@@ -66,14 +66,13 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="header">Unsere Geschichte</h2>
-            <h3 class="header-sub">vom Louise26</h3>
+            <h2 class="header">루이제26을 소개합니다</h2>
           </div>
           <div class="col-md-6"></div>
           <div class="col-md-6">
-            <p>Our values reflect those of a business started by a band of climbers and surfers, and the minimalist style they promoted. The approach we take towards product design demonstrates a bias for simplicity and utility.</p>
-            <p>For us at Patagonia, a love of wild and beautiful places demands participation in the fight to save them, and to help reverse the steep decline in the overall environmental health of our planet. We donate our time, services and at least 1% of our sales to hundreds of grassroots environmental groups all over the world who work to help reverse the tide.</p>
-            <p>We know that our business activity – from lighting stores to dyeing shirts – creates pollution as a by-product. So we work steadily to reduce those harms. We use recycled polyester in many of our clothes and only organic, rather than pesticide-intensive, cotton.</p>
+            <p>루이제26은 모던, 유니크, 하이그레이드의 컨셉을 바탕으로 유아 제품, 아동 제품, 주방/여성 제품을 주로 취급합니다</p>
+            <p>가깝게는 Bad Homburg, Oberursel, Eschborn 지역 주민들을 위한 로컬샵으로 역할을 하고, 멀게는 Frankfurt, Hessen Land의 지역 주민들을 위한 로컬샵으로 자리매김할 예정입니다.</p>
+            <p>지역 주민 뿐 아니라 아시아 및 유럽의 관광객을 위한 전문 서비스(픽업, 예약 구매 서비스)를 마련하여 서비스 대상을 확대할 예정입니다.</p>
           </div>
         </div>
       </div>
@@ -108,27 +107,22 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="header">Marken</h2>
-            <h3 class="header-sub">vom Louise26</h3>
+            <h2 class="header">취급 브랜드</h2>
           </div>
           <div class="col-md-12">
             <ul class="brand-list-wrap">
               <li><p class="brand-list-item logo-normann"></p></li>
               <li><p class="brand-list-item logo-vita"></p></li>
               <li><p class="brand-list-item logo-recaro"></p></li>
-              <li><p class="brand-list-item">Royal Copenhagen</p></li>
+              <li><p class="brand-list-item logo-royal-copenhagen"></p></li>
               <li><p class="brand-list-item logo-kusmitea"></p></li>
               <li><p class="brand-list-item logo-kai"></p></li>
               <li><p class="brand-list-item logo-illy"></p></li>
               <li><p class="brand-list-item logo-delonghi"></p></li>
-              <li><p class="brand-list-item">VBC Casa</p></li>
-              <li><p class="brand-list-item">Wesco</p></li>
-              <li><p class="brand-list-item">Nesmuk</p></li>
-              <li><p class="brand-list-item logo-cybex"></p></li>
             </ul>
           </div>
           <div class="col-md-12 btn-wrap">
-            <button class="btn-orange">More Infomation</button>
+            <a href="brand.html"><button class="btn-orange">모든 브랜드보기</button></a>
           </div>
         </div>
       </div>
@@ -137,8 +131,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="header">Cafe und Backerei</h2>
-            <h3 class="header-sub">vom Louise26</h3>
+            <h2 class="header">카페와 베이커리</h2>
+            <h3 class="header-sub">루이제26에서 맛있는 커피와 빵을 만나보세요</h3>
           </div>
           <div class="col-md-6">
             <p>Our values reflect those of a business started by a band of climbers and surfers, and the minimalist style they promoted. The approach we take towards product design demonstrates a bias for simplicity and utility.</p>
