--- a/shop.html
+++ b/shop.html
@@ -28,16 +28,19 @@
 
   </head>
   <body>
-    <div class="sub-header sub-hero background-full">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="logo">
-              <a href="index.html"><img src="svg/logo-rectangle.svg" width="30" /></a>
-            </div>
+    <div class="sub-title hero-sub-shop background-full">
+      <nav class="navbar navbar-inverse navbar-static-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a href="index.html" class="navbar-brand"><img src="svg/logo-rectangle.svg" width="30" /></a>
           </div>
-          <div class="col-md-9">
-            <ul class="nav-custom">
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
               <li><a href="shop.html">샵 소개</a></li>
               <li><a href="brand.html">취급 브랜드</a></li>
               <li><a href="bakery.html">베이커리/카페테리아</a></li>
@@ -45,9 +48,7 @@
             </ul>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="sub-title hero-sub-shop background-full">
+      </nav>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
