--- a/brand.html
+++ b/brand.html
@@ -28,16 +28,19 @@
 
   </head>
   <body>
-    <div class="sub-header sub-hero background-full">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="logo">
-              <a href="index.html"><img src="svg/logo-rectangle.svg" width="30" /></a>
-            </div>
+    <div class="sub-title hero-sub-brand background-full">
+      <nav class="navbar navbar-inverse navbar-static-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a href="index.html" class="navbar-brand"><img src="svg/logo-rectangle.svg" width="30" /></a>
           </div>
-          <div class="col-md-9">
-            <ul class="nav-custom">
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
               <li><a href="shop.html">샵 소개</a></li>
               <li><a href="brand.html">취급 브랜드</a></li>
               <li><a href="bakery.html">베이커리/카페테리아</a></li>
@@ -45,9 +48,7 @@
             </ul>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="sub-title hero-sub-brand background-full">
+      </nav>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -55,7 +56,7 @@
               루이제26에서 하이엔드 브랜드를 만나보세요
             </h1>
             <h2>
-              루이제26은 바트 홈부어크에 위치한 멀티 브랜드 샵 및 베이커리/카페입니다.
+              고객님의 라이프 스타일을 위한 다양한 브랜드를 취급하고 있습니다
             </h2>
           </div>
         </div>
@@ -69,19 +70,32 @@
               <li><p class="brand-list-item logo-normann"></p></li>
               <li><p class="brand-list-item logo-vita"></p></li>
               <li><p class="brand-list-item logo-recaro"></p></li>
-              <li><p class="brand-list-item">Royal Copenhagen</p></li>
+              <li><p class="brand-list-item logo-royal-copenhagen"></p></li>
               <li><p class="brand-list-item logo-kusmitea"></p></li>
               <li><p class="brand-list-item logo-kai"></p></li>
               <li><p class="brand-list-item logo-illy"></p></li>
               <li><p class="brand-list-item logo-delonghi"></p></li>
-              <li><p class="brand-list-item">VBC Casa</p></li>
-              <li><p class="brand-list-item">Wesco</p></li>
-              <li><p class="brand-list-item">Nesmuk</p></li>
+              <li><p class="brand-list-item logo-wesco"></p></li>
+              <li><p class="brand-list-item logo-nesmuk"></p></li>
               <li><p class="brand-list-item logo-cybex"></p></li>
+              <li><p class="brand-list-item logo-stelton"></p></li>
+              <li><p class="brand-list-item logo-house-doctor"></p></li>
+              <li><p class="brand-list-item logo-alfi"></p></li>
+              <li><p class="brand-list-item logo-britax"></p></li>
+              <li><p class="brand-list-item logo-skeppshult"></p></li>
+              <li><p class="brand-list-item logo-cote-table"></p></li>
+              <li><p class="brand-list-item logo-alessi"></p></li>
+              <li><p class="brand-list-item logo-kahler"></p></li>
+              <li><p class="brand-list-item logo-serax"></p></li>
+              <li><p class="brand-list-item logo-joseph-joseph"></p></li>
+              <li><p class="brand-list-item logo-marimekko"></p></li>
+              <li><p class="brand-list-item logo-nomi"></p></li>
+              <li><p class="brand-list-item logo-kaymet"></p></li>
+              <li><p class="brand-list-item logo-reichenbach"></p></li>
+              <li><p class="brand-list-item logo-apilco"></p></li>
+              <li><p class="brand-list-item logo-burleigh"></p></li>
+              <li><p class="brand-list-item logo-portmeirion"></p></li>
             </ul>
-          </div>
-          <div class="col-md-12 btn-wrap">
-            <button class="btn-orange">More Infomation</button>
           </div>
         </div>
       </div>
