모바일 디자인 추가

--- a/contact.html
+++ b/contact.html
@@ -95,24 +95,24 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="header">Kontakt</h2>
-            <h3 class="header-sub">vom Louise26</h3>
+            <h2 class="header">연락처</h2>
+            <h3 class="header-sub">아래의 연락처를 통해 루이제26에 연락하실 수 있습니다</h3>
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Louise26 Shop</strong>
-            +49 (0)176 6748 8188
+            <strong>Louise26 샵</strong>
+            +49 (0)6172 265 9291
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Louise26 E-MAIL</strong>
-            info@louise26.de
+            <strong>Louise26 이메일</strong>
+            <a href="mailto:info@louise26.de">info@louise26.de</a>
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Instagram</strong>
+            <strong>인스타그램</strong>
             @louise26badhomburg
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Facebook</strong>
-            fb.com/@louise26badhomburg
+            <strong>팩스</strong>
+            +49 (0)6172 265 9725
           </div>
         </div>
       </div>
