--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         <div class="row">
           <div class="col-md-12">
             <h2 class="header">취급 브랜드</h2>
+            <h3 class="header-sub">루이제26에서 유럽 각지의 다양한 브랜드를 만나보세요</h3>
           </div>
           <div class="col-md-12">
             <ul class="brand-list-wrap">
@@ -134,12 +135,10 @@
             <h2 class="header">카페와 베이커리</h2>
             <h3 class="header-sub">루이제26에서 맛있는 커피와 빵을 만나보세요</h3>
           </div>
-          <div class="col-md-6">
-            <p>Our values reflect those of a business started by a band of climbers and surfers, and the minimalist style they promoted. The approach we take towards product design demonstrates a bias for simplicity and utility.</p>
-            <p>For us at Patagonia, a love of wild and beautiful places demands participation in the fight to save them, and to help reverse the steep decline in the overall environmental health of our planet. We donate our time, services and at least 1% of our sales to hundreds of grassroots environmental groups all over the world who work to help reverse the tide.</p>
-            <p>We know that our business activity – from lighting stores to dyeing shirts – creates pollution as a by-product. So we work steadily to reduce those harms. We use recycled polyester in many of our clothes and only organic, rather than pesticide-intensive, cotton.</p>
+          <div class="col-md-6 col-md-offset-3">
+            <p>루이제26 카페에서는 여러 수상 경력에 빛나는 Backyard Coffee의 원두와 이태리 Rancilio 플래그십 에스프레소 머신을 사용한 어디에서도 경험할 수 없는 전문적인 커피를 제공합니다. 따뜻한 에스프레소부터 한국식의 아이스 아메리카노까지 전문점 그 이상의 커피를 제공합니다.</p>
+            <p>또한 루이제26 베이커리에서는 20년 프랑스, 일본, 한국 경력의 제빵사를 주축으로 생산된 프랑스와 한국, 일본 스타일의 빵과 샌드위치를 맛볼 수 있습니다.</p>
           </div>
-          <div class="col-md-6"></div>
         </div>
       </div>
     </div>
@@ -147,12 +146,13 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="header">Anfahrt</h2>
-            <h3 class="header-sub">vom Louise26</h3>
+            <h2 class="header">오시는 길</h2>
+            <h3 class="header-sub">&nbsp;</h3>
           </div>
           <div class="col-md-12">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d978.4146732131574!2d8.613317990272614!3d50.22853549049208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd07f14fc18193%3A0x87bf3504c6113917!2sLouise+26!5e0!3m2!1sko!2sde!4v1531300767743" width="100%" height="450" frameborder="0" style="border:1px solid #e3e3e3" allowfullscreen></iframe><br /><br />
-            <p>Louisenstraße 26, 61348 Bad Homburg vor der Höhe</p>
+            <p><strong>내비게이션에 아래의 주소를 입력해주세요.</strong><br />
+            Louisenstraße 26, 61348 Bad Homburg vor der Höhe</p>
           </div>
         </div>
       </div>
@@ -161,24 +161,24 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="header">Kontakt</h2>
-            <h3 class="header-sub">vom Louise26</h3>
+            <h2 class="header">연락처</h2>
+            <h3 class="header-sub">아래의 연락처를 통해 루이제26에 연락하실 수 있습니다</h3>
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Louise26 Shop</strong>
-            +49 (0)176 6748 8188
+            <strong>Louise26 샵</strong>
+            +49 (0)6172 265 9291
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Louise26 E-MAIL</strong>
-            info@louise26.de
+            <strong>Louise26 이메일</strong>
+            <a href="mailto:info@louise26.de">info@louise26.de</a>
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Instagram</strong>
+            <strong>인스타그램</strong>
             @louise26badhomburg
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Facebook</strong>
-            fb.com/@louise26badhomburg
+            <strong>팩스</strong>
+            +49 (0)6172 265 9725
           </div>
         </div>
       </div>
