--- a/shop.html
+++ b/shop.html
@@ -67,22 +67,36 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h3 class="paragraph-header">삶은 그리 단순하지 않습니다</h3>
+            <h3 class="paragraph-header">여러분의 삶은 다채롭습니다</h3>
           </div>
-          <div class="col-md-6">
+          <!-- <div class="col-md-6">
             <img src="images/sub-shop-1.jpg" width="100%" />
-          </div>
-          <div class="col-md-6">
+          </div> -->
+          <div class="col-md-6 col-md-offset-3">
             <p>우리는 모두 다른 삶을 살아갑니다.<br />
-              우리는 모두 다른 생활을 합니다.<br />
-              우리는 모두 다른 사람입니다.
+              우리는 모두 다른 생활을 합니다.
             </p>
             <p>
-              루이제26은 여러분의 생활을 위한 상품을 준비해두었습니다.
-              배우자와 함께 사용할 식기류, 보금자리를 아름답게 꾸밀 수 있는 인테리어 제품, 내 아이를 위한 안전한 유모차부터 카시트까지...
+              루이제26은 여러분의 생활을 위한 상품을 준비해두었습니다.<br />
+              배우자와 함께 사용할 식기류,<br />
+              보금자리를 아름답게 꾸밀 수 있는 인테리어 제품,<br />
+              내 아이를 위한 안전한 유모차부터 카시트까지...
             </p>
             <p>
               얼핏보면 어울리지 않는 제품들이지만, 생활이라는 단어 안에서는 모두 우리에게 필요한 제품입니다.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="divider-sub">&nbsp;</div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="paragraph-header">루이제26은<br />월요일부터 토요일까지<br />9시부터 18시까지 영업합니다.</h3>
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+            <p>
+              루이제26은 많은 고객분들을 만나뵙고 싶습니다.
             </p>
           </div>
         </div>
@@ -92,24 +106,24 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="header">Kontakt</h2>
-            <h3 class="header-sub">vom Louise26</h3>
+            <h2 class="header">연락처</h2>
+            <h3 class="header-sub">아래의 연락처를 통해 루이제26에 연락하실 수 있습니다</h3>
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Louise26 Shop</strong>
-            +49 (0)176 6748 8188
+            <strong>Louise26 샵</strong>
+            +49 (0)6172 265 9291
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Louise26 E-MAIL</strong>
-            info@louise26.de
+            <strong>Louise26 이메일</strong>
+            <a href="mailto:info@louise26.de">info@louise26.de</a>
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Instagram</strong>
+            <strong>인스타그램</strong>
             @louise26badhomburg
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Facebook</strong>
-            fb.com/@louise26badhomburg
+            <strong>팩스</strong>
+            +49 (0)6172 265 9725
           </div>
         </div>
       </div>
