--- a/brand.html
+++ b/brand.html
@@ -98,29 +98,39 @@
             </ul>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="paragraph-header">찾으시는 브랜드가 없으신가요?</h3>
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+            <p>
+              찾으시는 브랜드가 없거나, 필요한 상품이 있다면 <a href="contact.html"><strong><u>연락처</u></strong></a>를 통해 연락주세요. 최대한 수급할 수 있도록 노력하겠습니다.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="contact-block block background-full contact-hero">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="header">Kontakt</h2>
-            <h3 class="header-sub">vom Louise26</h3>
+            <h2 class="header">연락처</h2>
+            <h3 class="header-sub">아래의 연락처를 통해 루이제26에 연락하실 수 있습니다</h3>
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Louise26 Shop</strong>
+            <strong>Louise26 샵 (한국어)</strong>
             +49 (0)176 6748 8188
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Louise26 E-MAIL</strong>
+            <strong>Louise26 이메일</strong>
             info@louise26.de
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Instagram</strong>
+            <strong>인스타그램</strong>
             @louise26badhomburg
           </div>
           <div class="col-md-6 contact-item">
-            <strong>Facebook</strong>
+            <strong>페이스북</strong>
             fb.com/@louise26badhomburg
           </div>
         </div>
