--- a/bakery.html
+++ b/bakery.html
@@ -71,7 +71,7 @@
           <div class="col-md-3"></div>
           <div class="col-md-6">
             <p>루이제26에서는 하루에 한 번씩 직접 빵을 굽습니다.<br />프랑스 및 유럽의 전통적인 형식의 빵부터, 한국에서 먹었던 정감가는 빵까지 다양한 빵을 직접 생산하고 판매하고 있습니다.</p>
-            <p>맛있는 빵은 맛있는 음료와 함께 해야합니다. 루이제26 카페에서는 다수의 수상 경력을 가지고 있는 로스터리 전문 원두 브랜드인 'Backyard COffee'의 원두를 사용하여 고품질의 커피를 제공하고 있습니다.</p>
+            <p>맛있는 빵은 맛있는 음료와 함께 해야합니다. 루이제26 카페에서는 다수의 수상 경력을 가지고 있는 로스터리 전문 원두 브랜드인 'Backyard COffee'의 원두와 이태리 Rancilio社의 플래그십 에스프레소 머신을 사용하여 고품질의 커피를 제공하고 있습니다.</p>
             <p>루이제26에 오셔서 직접 생산한 다양하고 맛있는 음식을 편안하게 만끽해보세요. 물론, 루이제26의 다양한 상품을 구경하셔도 좋습니다.</p>
           </div>
         </div>
