--- a/shop.html
+++ b/shop.html
@@ -96,7 +96,8 @@
           </div>
           <div class="col-md-6 col-md-offset-3">
             <p>
-              루이제26은 많은 고객분들을 만나뵙고 싶습니다.
+              루이제26은 많은 고객분들을 만나뵙고 싶습니다.<br />
+              월요일부터 토요일까지 루이제26은 고객 여러분을 기다립니다.
             </p>
           </div>
         </div>
