--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
               궁금한 점은 지금 바로 연락주세요
             </h1>
             <h2>
-              루이제26은 고객 여러분의 편한 연락을 기다립니다
+              루이제26은 고객 여러분의 다양한 의견을 기다리고 있습니다
             </h2>
           </div>
         </div>
