--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               삶과 생활을<br />디자인 해드립니다
             </h1>
             <h2>
-              루이제26은 고객 여러분의 삶을 풍요롭게 하기 위한 라이프 스타일 전문 샵/베이커리입니다.
+              루이제26은 고객 여러분의 삶을 풍요롭게 하기 위한 라이프 스타일 멀티 브랜드 샵입니다.
             </h2>
           </div>
           <div class="col-md-12">
@@ -68,8 +68,7 @@
           <div class="col-md-12">
             <h2 class="header">루이제26을 소개합니다</h2>
           </div>
-          <div class="col-md-6"></div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-md-offset-3">
             <p>루이제26은 모던, 유니크, 하이그레이드의 컨셉을 바탕으로 유아 제품, 아동 제품, 주방/여성 제품을 주로 취급합니다</p>
             <p>가깝게는 Bad Homburg, Oberursel, Eschborn 지역 주민들을 위한 로컬샵으로 역할을 하고, 멀게는 Frankfurt, Hessen Land의 지역 주민들을 위한 로컬샵으로 자리매김할 예정입니다.</p>
             <p>지역 주민 뿐 아니라 아시아 및 유럽의 관광객을 위한 전문 서비스(픽업, 예약 구매 서비스)를 마련하여 서비스 대상을 확대할 예정입니다.</p>
