페이지 추가

--- a/Branding/index.html
+++ b/Branding/index.html
@@ -4,15 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0">
     <meta name="ROBOTS" content="ALL">
-    <title itemprop="name">DAMI Brand Guideline</title>
+    <title itemprop="name">DAMI Design Library</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/common.css">
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery-3.2.1.js"></script>
-    <script src="https://use.typekit.net/zuu2jze.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <script>
       $(document).ready(function () {
         $(document).on("scroll", onScroll);
@@ -55,22 +53,34 @@
 
   </head>
   <body>
+    <div class="header">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            DAMI Design Library
+          </div>
+          <div class="col-md-4">
+            
+          </div>
+        </div>
+      </div>
+    </div>
   	<div class="container">
   		<div class="row">
   			<div class="col-md-3">
           <nav>
             <ul>
-              <li><a href="#1" class="active">HOME</a></li>
-              <li><a href="#2">LOGO</a></li>
-              <li><a href="#3">COLOR GUIDE</a></li>
-              <li><a href="#icon">ICON</a></li>
-              <li><a href="#button">BUTTON</a></li>
+              <li><a href="#1" class="active">Home</a></li>
+              <li><a href="#2">Logo</a></li>
+              <li><a href="#3">Color guide</a></li>
+              <li><a href="#icon">Icon</a></li>
+              <li><a href="#button">Button</a></li>
             </ul>
           </nav> 
         </div>
   			<div class="col-md-9">
           <!-- paragraph split -->
-          <section id="1" class="header">
+          <section id="1">
           <div class="paragraph-body row">
             <div class="col-md-9">
               <h1 class="title">DAMI Style Guide</h1>
@@ -941,7 +951,44 @@
             <div class="col-md-12 icon">
               <h3>Icon</h3>
               <p>다미의 웹 서비스에 사용되는 아이콘입니다.<br />아이콘은 Line 스타일로 제작하며, DAMI Color Set에 있는 색상만 사용하여 제작합니다.</p>
-              <img src="./img/icon_set.png" width="848" height="260" />
+              <div class="block-icon">
+                <h4>Extra small pack</h4>
+                <ul class="list-icon-xs">
+                  <li class="icon-xs-barcode-code"></li>
+                  <li class="icon-xs-barcode-list"></li>
+                  <li class="icon-xs-barcode-text"></li>
+                  <li class="icon-xs-briff-case"></li>
+                  <li class="icon-xs-calc"></li>
+                  <li class="icon-xs-circle-qm"></li>
+                  <li class="icon-xs-clock"></li>
+                  <li class="icon-xs-code"></li>
+                  <li class="icon-xs-coin-check"></li>
+                  <li class="icon-xs-coin-right-arrow"></li>
+                  <li class="icon-xs-coin-warning"></li>
+                  <li class="icon-xs-credit-card"></li>
+                  <li class="icon-xs-id-card"></li>
+                  <li class="icon-xs-magni"></li>
+                  <li class="icon-xs-map-pin"></li>
+                  <li class="icon-xs-pen"></li>
+                  <li class="icon-xs-person-right-arrow"></li>
+                  <li class="icon-xs-rect-three-dot"></li>
+                  <li class="icon-xs-three-dot"></li>
+                  <li class="icon-xs-tri-warning"></li>
+                  <li class="icon-xs-warning"></li>
+                </ul>
+              </div>
+              <div class="block-icon">
+                <h4>Medium pack</h4>
+                <ul class="list-icon-md">
+                  <li class="icon-md-barcode-scanner"></li>
+                  <li class="icon-md-coin-pointer"></li>
+                  <li class="icon-md-measure-box"></li>
+                  <li class="icon-md-print"></li>
+                  <li class="icon-md-regal-pointer"></li>
+                  <li class="icon-md-select-box"></li>
+                  <li class="icon-md-table-download"></li>
+                </ul>
+              </div>
               <div class="description-full">If make icon for DAMI, must use color from color table.</div>
             </div>
           </div>
