하위 로고 추가

--- a/Branding/index.html
+++ b/Branding/index.html
@@ -123,6 +123,23 @@
               </div>
             </div>
           </div>
+          <div class="paragraph-body row">
+            <div class="col-md-12">
+              <h4>Partnership logos</h4>
+            </div>
+            <div class="col-md-4 logo-small">
+              <img src="./img/logo_weltcon_small.png" width="262" height="262" class="border-gray" />
+              <span class="description">Weltcon</span>
+            </div>
+            <div class="col-md-4 logo-small">
+              <img src="./img/logo_eurooutlet24_small.png" width="262" height="262" class="border-gray" />
+              <span class="description">Eurooutlet24</span>
+            </div>
+            <div class="col-md-4 logo-small">
+              <img src="./img/logo_louise26_small.png" width="262" height="262" class="border-gray" />
+              <span class="description">Louise26</span>
+            </div>
+          </div>
           </section>
           <!-- paragraph split -->
           <section id="3">
