--- a/index.html
+++ b/index.html
@@ -6,213 +6,23 @@
     <meta name="ROBOTS" content="ALL">
     <meta name="format-detection" content="telephone=no">
 
-    <title itemprop="name">Louise26 Bad homburg</title>
+    <title itemprop="name">Mungyu Kim</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
-    <!-- Add the slick-theme.css if you want default styling -->
-    <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
-    <link rel="stylesheet" href="https://use.typekit.net/evx5bta.css">
-
-    <!-- jQuery -->
-    <script
-    src="http://code.jquery.com/jquery-3.2.1.js"
-    integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-    crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/slick.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
   </head>
   <body>
-    <div class="intro-header intro-hero background-full">
-      <div class="logo">
-        <img src="svg/logo-rectangle.svg" width="30" />
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <ul class="nav-custom">
-              <li><a href="shop.html">샵 소개</a></li>
-              <li><a href="brand.html">취급 브랜드</a></li>
-              <li><a href="bakery.html">베이커리/카페테리아</a></li>
-              <li><a href="contact.html">연락처</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1>
-              삶과 생활을<br />디자인 해드립니다
-            </h1>
-            <h2>
-              루이제26은 고객 여러분의 삶을 풍요롭게 하기 위한 라이프 스타일 멀티 브랜드 샵입니다.
-            </h2>
-          </div>
-          <div class="col-md-12">
-            <div style="position: relative;" class="btn-more-info">
-              <img src="images/icon_crewshop_small_arrow_bottom.png" class="arrow-bottom" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="introduce-block block">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="header">루이제26을 소개합니다</h2>
-          </div>
-          <div class="col-md-6 col-md-offset-3">
-            <p>루이제26은 모던, 유니크, 하이그레이드의 컨셉을 바탕으로 유아 제품, 아동 제품, 주방/여성 제품을 주로 취급합니다</p>
-            <p>가깝게는 Bad Homburg, Oberursel, Eschborn 지역 주민들을 위한 로컬샵으로 역할을 하고, 멀게는 Frankfurt, Hessen Land의 지역 주민들을 위한 로컬샵으로 자리매김할 예정입니다.</p>
-            <p>지역 주민 뿐 아니라 아시아 및 유럽의 관광객을 위한 전문 서비스(픽업, 예약 구매 서비스)를 마련하여 서비스 대상을 확대할 예정입니다.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- <div class="concept-block block background-full concept-hero">
-      <div class="container">
-        <div class="row">
-          <h2 class="header">Discover a variety of European products at Crew Shop</h2>
-          <div class="col-md-3 paragraph">
-            <strong>Cosmetics</strong><br />
-            Babor, Ettlebel, Sansusi, Alexi, Martiderm, Sortis, Ddalgo, Klap
-          </div>
-          <div class="col-md-3 paragraph">
-            <strong>Porcelain</strong><br />
-            Royal Copenhagen, Herend, Marimekko, Le Cartuja, Pesaro,
-            Serax, Portmerion, Reichenbach, Cote table
-          </div>
-          <div class="col-md-3 paragraph">
-            <strong>Kitchen, Household</strong><br />
-            Skepshult, Zwilling, WMF, Silit, Rosle, Wesco
-            Delonghi, Illy, Krups
-          </div>
-          <div class="col-md-3 paragraph">
-            <strong>Fashion</strong><br />
-            Longchamp, Coach, Prada, Fendy
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <div class="divider">&nbsp;</div>
-    <div class="brand-block block">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="header">취급 브랜드</h2>
-            <h3 class="header-sub">루이제26에서 유럽 각지의 다양한 브랜드를 만나보세요</h3>
-          </div>
-          <div class="col-md-12">
-            <ul class="brand-list-wrap">
-              <li><p class="brand-list-item logo-normann"></p></li>
-              <li><p class="brand-list-item logo-vita"></p></li>
-              <li><p class="brand-list-item logo-recaro"></p></li>
-              <li><p class="brand-list-item logo-royal-copenhagen"></p></li>
-              <li><p class="brand-list-item logo-kusmitea"></p></li>
-              <li><p class="brand-list-item logo-kai"></p></li>
-              <li><p class="brand-list-item logo-illy"></p></li>
-              <li><p class="brand-list-item logo-delonghi"></p></li>
-            </ul>
-          </div>
-          <div class="col-md-12 btn-wrap">
-            <a href="brand.html"><button class="btn-orange">모든 브랜드보기</button></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="cafe-block block background-full cafe-hero">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="header">카페와 베이커리</h2>
-            <h3 class="header-sub">루이제26에서 맛있는 커피와 빵을 만나보세요</h3>
-          </div>
-          <div class="col-md-6 col-md-offset-3">
-            <p>루이제26 카페에서는 여러 수상 경력에 빛나는 Backyard Coffee의 원두와 이태리 Rancilio 플래그십 에스프레소 머신을 사용한 어디에서도 경험할 수 없는 전문적인 커피를 제공합니다. 따뜻한 에스프레소부터 한국식의 아이스 아메리카노까지 전문점 그 이상의 커피를 제공합니다.</p>
-            <p>또한 루이제26 베이커리에서는 20년 프랑스, 일본, 한국 경력의 제빵사를 주축으로 생산된 프랑스와 한국, 일본 스타일의 빵과 샌드위치를 맛볼 수 있습니다.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="direction-block block">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="header">오시는 길</h2>
-            <h3 class="header-sub">&nbsp;</h3>
-          </div>
-          <div class="col-md-12">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d978.4146732131574!2d8.613317990272614!3d50.22853549049208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd07f14fc18193%3A0x87bf3504c6113917!2sLouise+26!5e0!3m2!1sko!2sde!4v1531300767743" width="100%" height="450" frameborder="0" style="border:1px solid #e3e3e3" allowfullscreen></iframe><br /><br />
-            <p><strong>내비게이션에 아래의 주소를 입력해주세요.</strong><br />
-            Louisenstraße 26, 61348 Bad Homburg vor der Höhe</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="contact-block block background-full contact-hero">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="header">연락처</h2>
-            <h3 class="header-sub">아래의 연락처를 통해 루이제26에 연락하실 수 있습니다</h3>
-          </div>
-          <div class="col-md-6 contact-item">
-            <strong>Louise26 샵</strong>
-            +49 (0)6172 265 9291
-          </div>
-          <div class="col-md-6 contact-item">
-            <strong>Louise26 이메일</strong>
-            <a href="mailto:info@louise26.de">info@louise26.de</a>
-          </div>
-          <div class="col-md-6 contact-item">
-            <strong>인스타그램</strong>
-            @louise26badhomburg
-          </div>
-          <div class="col-md-6 contact-item">
-            <strong>팩스</strong>
-            +49 (0)6172 265 9725
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="opening-time-block block">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 opening-time-item">
-            <strong>Öffnungszeiten</strong>
-            Montag bis Samstag<br />
-            9:00 bis 18:00 Uhr
-          </div>
-          <div class="col-md-3 opening-time-item">
-          </div>
-          <div class="col-md-6 opening-time-item">
-            <strong>Newsletter</strong>
-            @louise26badhomburg
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer class="footer-block">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <img src="svg/logo-rectangle.svg" width="18" style="margin-top: -2px;" /> <strong>© 2018 Louise26</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Louisenstraße 26, 61348 Bad Homburg vor der Höhe
-          </div>
-        </div>
-      </div>
-    </footer>
-    <script>
-    $('#products-carousel').slick({
-      dots:true
-
-    });
-    </script>
+    <h1>Kim Mungyu</h1>
+    <h3>UX/UI designer who work in Frankfurt, Germany</h3>
+    <p>This website is in progress</p>
+    <p>
+    </p>
+    <p>
+    </p>
   </body>
 </html>
