디자인 추가

--- a/index.html
+++ b/index.html
@@ -6,23 +6,447 @@
     <meta name="ROBOTS" content="ALL">
     <meta name="format-detection" content="telephone=no">
 
-    <title itemprop="name">Mungyu Kim</title>
+    <title itemprop="name">Webchips</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/wantone.css">
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
   </head>
   <body>
-    <h1>Kim Mungyu</h1>
-    <h3>UX/UI designer who work in Frankfurt, Germany</h3>
-    <p>This website is in progress</p>
-    <p>
-    </p>
-    <p>
-    </p>
+    <div class="title-wrap">
+      <h1 class="title"><img src="./images/logo-webchips.svg" width="24" height="24"> WebChips</h1>
+      <p class="description">
+        <strong>Webchips</strong> is a free collection for using in applications for digital display.<br />
+        All colors are gathered by Mungyu Kim.<br />
+        You can freely use this color-chips and if you satisfied please share this collection.<br />
+        <span style="color: #bfbfbf">This service is in progress. :-)</span>
+      </p>
+      <ul class="share">
+        <li><a href="https://dribbble.com/mungyukim"><img src="./images/icon-dribbble.svg" width="24" height="24"></a></li>
+        <li><a href="https://www.linkedin.com/in/mungyu-kim-077055146/"><img src="./images/icon-linkedin.svg" width="24" height="24"></a></li>
+      </ul>
+    </div>
+    <div class="chips">
+      <div class="color-tone">
+        <h3>Gray tone</h3>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main gray-110">
+              Gray 110
+            </div>
+            <div class="color-box-sub step-100 gray-110"></div>
+            <div class="color-box-sub step-070 gray-110"></div>
+            <div class="color-box-sub step-050 gray-110"></div>
+            <div class="color-box-sub step-030 gray-110"></div>
+            <div class="color-box-sub step-000 gray-110"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip empty">
+            <div class="color-box-main">
+              Empty
+            </div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main gray-310">
+              Gray 310
+            </div>
+            <div class="color-box-sub step-100 gray-310"></div>
+            <div class="color-box-sub step-070 gray-310"></div>
+            <div class="color-box-sub step-050 gray-310"></div>
+            <div class="color-box-sub step-030 gray-310"></div>
+            <div class="color-box-sub step-000 gray-310"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip empty">
+            <div class="color-box-main">
+              Empty
+            </div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main gray-510">
+              Gray 510
+            </div>
+            <div class="color-box-sub step-100 gray-510"></div>
+            <div class="color-box-sub step-070 gray-510"></div>
+            <div class="color-box-sub step-050 gray-510"></div>
+            <div class="color-box-sub step-030 gray-510"></div>
+            <div class="color-box-sub step-000 gray-510"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main gray-520">
+              Gray 520
+            </div>
+            <div class="color-box-sub step-100 gray-520"></div>
+            <div class="color-box-sub step-070 gray-520"></div>
+            <div class="color-box-sub step-050 gray-520"></div>
+            <div class="color-box-sub step-030 gray-520"></div>
+            <div class="color-box-sub step-000 gray-520"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip empty">
+            <div class="color-box-main">
+              Empty
+            </div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main gray-710">
+              Gray 710
+            </div>
+            <div class="color-box-sub step-100 gray-710"></div>
+            <div class="color-box-sub step-070 gray-710"></div>
+            <div class="color-box-sub step-050 gray-710"></div>
+            <div class="color-box-sub step-030 gray-710"></div>
+            <div class="color-box-sub step-000 gray-710"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main gray-720">
+              Gray 720
+            </div>
+            <div class="color-box-sub step-100 gray-720"></div>
+            <div class="color-box-sub step-070 gray-720"></div>
+            <div class="color-box-sub step-050 gray-720"></div>
+            <div class="color-box-sub step-030 gray-720"></div>
+            <div class="color-box-sub step-000 gray-720"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main gray-810">
+              Gray 810
+            </div>
+            <div class="color-box-sub step-100 gray-810"></div>
+            <div class="color-box-sub step-070 gray-810"></div>
+            <div class="color-box-sub step-050 gray-810"></div>
+            <div class="color-box-sub step-030 gray-810"></div>
+            <div class="color-box-sub step-000 gray-810"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main gray-820">
+              Gray 820
+            </div>
+            <div class="color-box-sub step-100 gray-820"></div>
+            <div class="color-box-sub step-070 gray-820"></div>
+            <div class="color-box-sub step-050 gray-820"></div>
+            <div class="color-box-sub step-030 gray-820"></div>
+            <div class="color-box-sub step-000 gray-820"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip empty">
+            <div class="color-box-main">
+              Empty
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="color-tone">
+        <h3>Blue tone</h3>
+        <div class="color-block">
+          <div class="color-chip empty">
+            <div class="color-box-main">
+              Empty
+            </div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main blue-210">
+              Blue 210
+            </div>
+            <div class="color-box-sub step-100 blue-210"></div>
+            <div class="color-box-sub step-070 blue-210"></div>
+            <div class="color-box-sub step-050 blue-210"></div>
+            <div class="color-box-sub step-030 blue-210"></div>
+            <div class="color-box-sub step-000 blue-210"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip empty">
+            <div class="color-box-main">
+              Empty
+            </div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main blue-410">
+              Blue 410
+            </div>
+            <div class="color-box-sub step-100 blue-410"></div>
+            <div class="color-box-sub step-070 blue-410"></div>
+            <div class="color-box-sub step-050 blue-410"></div>
+            <div class="color-box-sub step-030 blue-410"></div>
+            <div class="color-box-sub step-000 blue-410"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main blue-510">
+              Blue 510
+            </div>
+            <div class="color-box-sub step-100 blue-510"></div>
+            <div class="color-box-sub step-070 blue-510"></div>
+            <div class="color-box-sub step-050 blue-510"></div>
+            <div class="color-box-sub step-030 blue-510"></div>
+            <div class="color-box-sub step-000 blue-510"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main blue-610">
+              Blue 610
+            </div>
+            <div class="color-box-sub step-100 blue-610"></div>
+            <div class="color-box-sub step-070 blue-610"></div>
+            <div class="color-box-sub step-050 blue-610"></div>
+            <div class="color-box-sub step-030 blue-610"></div>
+            <div class="color-box-sub step-000 blue-610"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main blue-620">
+              Blue 620
+            </div>
+            <div class="color-box-sub step-100 blue-620"></div>
+            <div class="color-box-sub step-070 blue-620"></div>
+            <div class="color-box-sub step-050 blue-620"></div>
+            <div class="color-box-sub step-030 blue-620"></div>
+            <div class="color-box-sub step-000 blue-620"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main blue-630">
+              Blue 630
+            </div>
+            <div class="color-box-sub step-100 blue-630"></div>
+            <div class="color-box-sub step-070 blue-630"></div>
+            <div class="color-box-sub step-050 blue-630"></div>
+            <div class="color-box-sub step-030 blue-630"></div>
+            <div class="color-box-sub step-000 blue-630"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main blue-710">
+              Blue 710
+            </div>
+            <div class="color-box-sub step-100 blue-710"></div>
+            <div class="color-box-sub step-070 blue-710"></div>
+            <div class="color-box-sub step-050 blue-710"></div>
+            <div class="color-box-sub step-030 blue-710"></div>
+            <div class="color-box-sub step-000 blue-710"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main blue-720">
+              Blue 720
+            </div>
+            <div class="color-box-sub step-100 blue-720"></div>
+            <div class="color-box-sub step-070 blue-720"></div>
+            <div class="color-box-sub step-050 blue-720"></div>
+            <div class="color-box-sub step-030 blue-720"></div>
+            <div class="color-box-sub step-000 blue-720"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main blue-730">
+              Blue 730
+            </div>
+            <div class="color-box-sub step-100 blue-730"></div>
+            <div class="color-box-sub step-070 blue-730"></div>
+            <div class="color-box-sub step-050 blue-730"></div>
+            <div class="color-box-sub step-030 blue-730"></div>
+            <div class="color-box-sub step-000 blue-730"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main blue-740">
+              Blue 740
+            </div>
+            <div class="color-box-sub step-100 blue-740"></div>
+            <div class="color-box-sub step-070 blue-740"></div>
+            <div class="color-box-sub step-050 blue-740"></div>
+            <div class="color-box-sub step-030 blue-740"></div>
+            <div class="color-box-sub step-000 blue-740"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main blue-810">
+              Blue 810
+            </div>
+            <div class="color-box-sub step-100 blue-810"></div>
+            <div class="color-box-sub step-070 blue-810"></div>
+            <div class="color-box-sub step-050 blue-810"></div>
+            <div class="color-box-sub step-030 blue-810"></div>
+            <div class="color-box-sub step-000 blue-810"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main blue-910">
+              Blue 910
+            </div>
+            <div class="color-box-sub step-100 blue-910"></div>
+            <div class="color-box-sub step-070 blue-910"></div>
+            <div class="color-box-sub step-050 blue-910"></div>
+            <div class="color-box-sub step-030 blue-910"></div>
+            <div class="color-box-sub step-000 blue-910"></div>
+          </div>
+        </div>
+      </div>
+      <div class="color-tone">
+        <h3>Red tone</h3>
+        <div class="color-block">
+          <div class="color-chip empty">
+            <div class="color-box-main">
+              Empty
+            </div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip empty">
+            <div class="color-box-main">
+              Empty
+            </div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main red-310">
+              Red 310
+            </div>
+            <div class="color-box-sub step-100 red-310"></div>
+            <div class="color-box-sub step-070 red-310"></div>
+            <div class="color-box-sub step-050 red-310"></div>
+            <div class="color-box-sub step-030 red-310"></div>
+            <div class="color-box-sub step-000 red-310"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main red-410">
+              Red 410
+            </div>
+            <div class="color-box-sub step-100 red-410"></div>
+            <div class="color-box-sub step-070 red-410"></div>
+            <div class="color-box-sub step-050 red-410"></div>
+            <div class="color-box-sub step-030 red-410"></div>
+            <div class="color-box-sub step-000 red-410"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main red-510">
+              Red 510
+            </div>
+            <div class="color-box-sub step-100 red-510"></div>
+            <div class="color-box-sub step-070 red-510"></div>
+            <div class="color-box-sub step-050 red-510"></div>
+            <div class="color-box-sub step-030 red-510"></div>
+            <div class="color-box-sub step-000 red-510"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main red-610">
+              Red 610
+            </div>
+            <div class="color-box-sub step-100 red-610"></div>
+            <div class="color-box-sub step-070 red-610"></div>
+            <div class="color-box-sub step-050 red-610"></div>
+            <div class="color-box-sub step-030 red-610"></div>
+            <div class="color-box-sub step-000 red-610"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main red-710">
+              Red 710
+            </div>
+            <div class="color-box-sub step-100 red-710"></div>
+            <div class="color-box-sub step-070 red-710"></div>
+            <div class="color-box-sub step-050 red-710"></div>
+            <div class="color-box-sub step-030 red-710"></div>
+            <div class="color-box-sub step-000 red-710"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main red-720">
+              Red 720
+            </div>
+            <div class="color-box-sub step-100 red-720"></div>
+            <div class="color-box-sub step-070 red-720"></div>
+            <div class="color-box-sub step-050 red-720"></div>
+            <div class="color-box-sub step-030 red-720"></div>
+            <div class="color-box-sub step-000 red-720"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main red-810">
+              Red 810
+            </div>
+            <div class="color-box-sub step-100 red-810"></div>
+            <div class="color-box-sub step-070 red-810"></div>
+            <div class="color-box-sub step-050 red-810"></div>
+            <div class="color-box-sub step-030 red-810"></div>
+            <div class="color-box-sub step-000 red-810"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main red-820">
+              Red 820
+            </div>
+            <div class="color-box-sub step-100 red-820"></div>
+            <div class="color-box-sub step-070 red-820"></div>
+            <div class="color-box-sub step-050 red-820"></div>
+            <div class="color-box-sub step-030 red-820"></div>
+            <div class="color-box-sub step-000 red-820"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main red-830">
+              Red 830
+            </div>
+            <div class="color-box-sub step-100 red-830"></div>
+            <div class="color-box-sub step-070 red-830"></div>
+            <div class="color-box-sub step-050 red-830"></div>
+            <div class="color-box-sub step-030 red-830"></div>
+            <div class="color-box-sub step-000 red-830"></div>
+          </div>
+        </div>
+        <div class="color-block">
+          <div class="color-chip">
+            <div class="color-box-main red-910">
+              Red 910
+            </div>
+            <div class="color-box-sub step-100 red-910"></div>
+            <div class="color-box-sub step-070 red-910"></div>
+            <div class="color-box-sub step-050 red-910"></div>
+            <div class="color-box-sub step-030 red-910"></div>
+            <div class="color-box-sub step-000 red-910"></div>
+          </div>
+          <div class="color-chip">
+            <div class="color-box-main red-920">
+              Red 920
+            </div>
+            <div class="color-box-sub step-100 red-920"></div>
+            <div class="color-box-sub step-070 red-920"></div>
+            <div class="color-box-sub step-050 red-920"></div>
+            <div class="color-box-sub step-030 red-920"></div>
+            <div class="color-box-sub step-000 red-920"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      (C) 2018 kimmungyu.github.io
+    </div>
   </body>
 </html>
